@@ -61,6 +61,7 @@ export(base.rpdgetrf)
 export(base.rpdgetri)
 export(base.rpdlange)
 export(base.rpdlaprnt)
+export(base.rpdorglq)
 export(base.rpdorgqr)
 export(base.rpdormqr)
 export(base.rpdpotrf)
@@ -95,4 +96,4 @@ importFrom(pbdMPI,comm.print)
 importFrom(pbdMPI,comm.rank)
 importFrom(pbdMPI,comm.stop)
 importFrom(pbdMPI,comm.warning)
-useDynLib(pbdBASE, R_nbd, R_NUMROC, R_PDLAPRNT, g2l_coords, l2g_coords, R_optimal_grid, R_blacs_init, R_igsum2d1, R_dgsum2d1, R_igamx2d1, R_dgamx2d1, R_igamn2d1, R_dgamn2d1, R_dgesd2d1, R_dgerv2d1, R_PDGELS, R_matexp, R_p_matpow_by_squaring, R_p_matexp_pade, R_PDTRAN, R_PDGEMM, R_PDCROSSPROD, R_PDCHTRI, R_PDCLVAR, R_MKSUBMAT, R_MKGBLMAT, R_DALLREDUCE, R_PTRI2ZERO, R_PDSWEEP, R_RL2BLAS, R_RL2INSERT, R_PDGDGTK, R_PDDIAGMK, R_RCOLCPY, R_RCOLCPY2, R_RROWCPY, R_RROWCPY2, R_PDMVSUM, R_DHILBMK, R_PDHILBMK, R_PDMKCPN1, R_PDGEQPF, R_PDORGQR, R_PDORMQR, R_PDGELQF, R_PDGETRI, R_PDGESV, R_PDGESVD, R_PDSYEVR, R_PDPOTRF, R_PDSYEVX, R_PDGETRF, R_PDLANGE, R_PDTRCON, R_PDGECON, R_PDGEMR2D, R_g2lcoord)
+useDynLib(pbdBASE, R_nbd, R_NUMROC, R_PDLAPRNT, g2l_coords, l2g_coords, R_optimal_grid, R_blacs_init, R_igsum2d1, R_dgsum2d1, R_igamx2d1, R_dgamx2d1, R_igamn2d1, R_dgamn2d1, R_dgesd2d1, R_dgerv2d1, R_PDGELS, R_matexp, R_p_matpow_by_squaring, R_p_matexp_pade, R_PDTRAN, R_PDGEMM, R_PDCROSSPROD, R_PDCHTRI, R_PDCLVAR, R_MKSUBMAT, R_MKGBLMAT, R_DALLREDUCE, R_PTRI2ZERO, R_PDSWEEP, R_RL2BLAS, R_RL2INSERT, R_PDGDGTK, R_PDDIAGMK, R_RCOLCPY, R_RCOLCPY2, R_RROWCPY, R_RROWCPY2, R_PDMVSUM, R_DHILBMK, R_PDHILBMK, R_PDMKCPN1, R_PDGEQPF, R_PDORGQR, R_PDORMQR, R_PDGELQF, R_PDORGLQ, R_PDGETRI, R_PDGESV, R_PDGESVD, R_PDSYEVR, R_PDPOTRF, R_PDSYEVX, R_PDGETRF, R_PDLANGE, R_PDTRCON, R_PDGECON, R_PDGEMR2D, R_g2lcoord)
