@@ -21,7 +21,7 @@
 #'   R_MKSUBMAT, R_MKGBLMAT, R_DALLREDUCE, R_PTRI2ZERO, R_PDSWEEP, R_RL2BLAS, 
 #'   R_RL2INSERT, R_PDGDGTK, R_PDDIAGMK, R_RCOLCPY, R_RCOLCPY2, R_RROWCPY, 
 #'   R_RROWCPY2, R_PDMVSUM, R_DHILBMK, R_PDHILBMK, R_PDMKCPN1, 
-#'   R_PDGEQPF, R_PDORGQR, R_PDORMQR, R_PDGELQF,
+#'   R_PDGEQPF, R_PDORGQR, R_PDORMQR, R_PDGELQF, R_PDORGLQ,
 #'   R_PDGETRI, R_PDGESV, R_PDGESVD, R_PDSYEVR, R_PDPOTRF, R_PDSYEVX, 
 #'   R_PDGETRF, R_PDLANGE, R_PDTRCON, R_PDGECON, R_PDGEMR2D,
 #'   R_g2lcoord
