@@ -1,0 +1,26 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/base_qr.r
+\name{base.rpdorglq}
+\alias{base.rpdorglq}
+\title{rpdorglq}
+\usage{
+base.rpdorglq(m, n, k, lq, desc, tau)
+}
+\arguments{
+\item{m, n}{Problem size.}
+
+\item{k}{Number of elementary reflectors.}
+
+\item{lq}{QR decomposition.}
+
+\item{desc}{ScaLAPACK descriptor array.}
+
+\item{tau}{Elementary reflectors.}
+}
+\description{
+Recover Q.
+}
+\details{
+For advanced users only.
+}
+
