@@ -180,7 +180,7 @@ SEXP R_PDORGQR(SEXP M, SEXP N, SEXP K, SEXP A, SEXP ALDIM, SEXP DESCA, SEXP TAU)
 // LQ
 // ----------------------------------------------------------------------------
 
-/* Computing QR */
+/* Computing LQ */
 SEXP R_PDGELQF(SEXP M, SEXP N, SEXP A, SEXP DESCA)
 {
   R_INIT;
@@ -217,6 +217,48 @@ SEXP R_PDGELQF(SEXP M, SEXP N, SEXP A, SEXP DESCA)
   // Manage return
   RET_NAMES = make_list_names(3, "lq", "tau", "INFO");
   RET = make_list(RET_NAMES, 3, A_OUT, TAU, INFO);
+  
+  R_END;
+  return RET;
+}
+
+
+
+/* recovering Q from a LQ */
+SEXP R_PDORGLQ(SEXP M, SEXP N, SEXP K, SEXP A, SEXP DESCA, SEXP TAU)
+{
+  R_INIT;
+  const int m_loc = nrows(A);
+  const int n_loc = ncols(A);
+  int lwork = -1;
+  int IJ = 1;
+  double work = 0.0;
+  double tmp = 0.0;
+  double *p_work;
+  SEXP RET, RET_NAMES, INFO, A_OUT;
+  
+  /* Protect R objects. */
+  newRvec(INFO, 1, "int", true);
+  newRmat(A_OUT, m_loc, n_loc, "dbl");
+  
+  /* Copy A since pdorglq writes in place */
+  memcpy(REAL(A_OUT), REAL(A), m_loc*n_loc * sizeof(double*));
+  
+  /* workspace query */
+  pdorglq_(INTP(M), INTP(N), INTP(K), &tmp, &IJ, &IJ, INTP(DESCA),
+    &tmp, &work, &lwork, INTP(INFO));
+  
+  /* allocate work vector and recover Q */
+  lwork = (int) work;
+  lwork = nonzero(lwork);
+  p_work = (double *) R_alloc(lwork, sizeof(double));
+  
+  pdorglq_(INTP(M), INTP(N), INTP(K), REAL(A_OUT), &IJ, &IJ, INTP(DESCA),
+    REAL(TAU), p_work, &lwork, INTP(INFO));
+  
+  /* Return. */
+  RET_NAMES = make_list_names(2, "INFO", "A");
+  RET = make_list(RET_NAMES, 2, INFO, A_OUT);
   
   R_END;
   return RET;
